[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Regression"
authors = [{name = "Shiron Drusinsky", email = "shiron.drusinsky@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
	"pytest>=6.2.5",
	"numpy==1.19.2",
	"pandas==1.1.3",
	"matplotlib==3.3.2",
	"scikit_learn==1.0.2"
]

[project.urls]
Home = "https://github.com/shirondru/project6"
